--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,6 +3,12 @@ environment:
   matrix:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     PowerShellEdition: Desktop
+    Test: Min
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    PowerShellEdition: Core
+    Test: Min
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    PowerShellEdition: Desktop
     Test: Full
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     PowerShellEdition: Core
@@ -13,12 +19,7 @@ environment:
   - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
     PowerShellEdition: Core
     Test: Norm
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    PowerShellEdition: Desktop
-    Test: Min
-  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    PowerShellEdition: Core
-    Test: Min
+
 
 matrix:
   # immediately finish build on failure
@@ -26,11 +27,11 @@ matrix:
 
 # Scripts that run after cloning
 install:
-  - ps: Install-Module -Name InvokeBuild, PowerShellGet, Pester, PSScriptAnalyzer -SkipPublisherCheck -Force
+  - pwsh: Install-Module -Name InvokeBuild, PowerShellGet, Pester, PSScriptAnalyzer -SkipPublisherCheck -Force
 build_script:
-  - ps: |
+  - pwsh: |
       $ErrorActionPreference = 'Stop'
       $buildScript = ".\build.ps1"
       Invoke-Build -File $buildScript
-      #Compress-Archive -Path ".\bin\PesterHelpers\" -DestinationPath ".\PesterHelpers.zip"
-      #Push-AppveyorArtifact ".\PesterHelpers.zip"
+      Compress-Archive -Path ".\bin\$Env:APPVEYOR_PROJECT_NAME" -DestinationPath ".\$Env:APPVEYOR_PROJECT_NAME.zip"
+      Push-AppveyorArtifact ".\$Env:APPVEYOR_PROJECT_NAME.zip"
